--- a/store/mainwindow.ui
+++ b/store/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="aCardapio">
      <widget class="QLabel" name="label_3">
@@ -268,6 +268,110 @@
       </property>
      </widget>
     </widget>
+    <widget class="QWidget" name="bCarrinho">
+     <widget class="QLabel" name="tittle_2">
+      <property name="geometry">
+       <rect>
+        <x>230</x>
+        <y>20</y>
+        <width>361</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>36</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Itens no Carrinho</string>
+      </property>
+     </widget>
+     <widget class="QListWidget" name="itemsInCartList">
+      <property name="geometry">
+       <rect>
+        <x>225</x>
+        <y>100</y>
+        <width>371</width>
+        <height>291</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="totalPriceInCart">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>400</y>
+        <width>141</width>
+        <height>81</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roman</family>
+        <pointsize>18</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Total:</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButtonPay">
+      <property name="geometry">
+       <rect>
+        <x>430</x>
+        <y>410</y>
+        <width>171</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>18</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Pagar</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButtonBackToSelection">
+      <property name="geometry">
+       <rect>
+        <x>430</x>
+        <y>480</y>
+        <width>171</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>18</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Back</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="totalPrice">
+      <property name="geometry">
+       <rect>
+        <x>230</x>
+        <y>420</y>
+        <width>191</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Roman</family>
+        <pointsize>18</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </widget>
     <widget class="QWidget" name="cPagamento">
      <widget class="QLabel" name="tittle_3">
       <property name="geometry">
@@ -327,9 +431,9 @@
      <widget class="QLabel" name="totalPriceValue">
       <property name="geometry">
        <rect>
-        <x>540</x>
+        <x>340</x>
         <y>120</y>
-        <width>91</width>
+        <width>351</width>
         <height>61</height>
        </rect>
       </property>
@@ -493,110 +597,6 @@
       </property>
       <property name="text">
        <string>Novo Pedido</string>
-      </property>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="bCarrinho">
-     <widget class="QLabel" name="tittle_2">
-      <property name="geometry">
-       <rect>
-        <x>230</x>
-        <y>20</y>
-        <width>361</width>
-        <height>61</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>36</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Itens no Carrinho</string>
-      </property>
-     </widget>
-     <widget class="QListWidget" name="listWidget">
-      <property name="geometry">
-       <rect>
-        <x>225</x>
-        <y>100</y>
-        <width>371</width>
-        <height>291</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="totalPriceInCart">
-      <property name="geometry">
-       <rect>
-        <x>210</x>
-        <y>400</y>
-        <width>141</width>
-        <height>81</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>Roman</family>
-        <pointsize>18</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Total:</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButtonPay">
-      <property name="geometry">
-       <rect>
-        <x>430</x>
-        <y>410</y>
-        <width>171</width>
-        <height>61</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>18</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Pagar</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButtonBackToSelection">
-      <property name="geometry">
-       <rect>
-        <x>430</x>
-        <y>480</y>
-        <width>171</width>
-        <height>61</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>18</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Back</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="totalPriceInCart_3">
-      <property name="geometry">
-       <rect>
-        <x>340</x>
-        <y>420</y>
-        <width>51</width>
-        <height>51</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>Roman</family>
-        <pointsize>18</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string/>
       </property>
      </widget>
     </widget>
